test/types/string/assignToChar/testAssign.5.good
Helpers.chpl:10: In function 'testAssign':
Helpers.chpl:12: error: Cannot assign to int(8) from string
Helpers.chpl:12: note: did you mean to call '.toByte()'?
  testAssign.chpl:14: called as testAssign(param strBytes = "a", type toType = int(8))
